--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     # nginx.ingress.kubernetes.io/enable-cors: "true"
 spec:
   rules:
-    - host: k8s.jvm.my.id
+    - host: ari.jvm.my.id
       http:
         paths:
           - path: /
@@ -23,5 +23,5 @@ spec:
                   number: 9003
   tls:
     - hosts:
-        - k8s.jvm.my.id
+        - ari.jvm.my.id
       secretName: customer-app-tls
